--- a/app/src/main/res/layout/collect_missingdetails.xml
+++ b/app/src/main/res/layout/collect_missingdetails.xml
@@ -13,14 +13,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:fontFamily="cursive"
             android:gravity="center"
             android:text="@string/missingdetails"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            android:textSize="40sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
