--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -43,7 +43,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"  >
+        android:layout_height="match_parent" >
+
+
         <View
             android:id="@+id/square_view"
             android:layout_width="100dp"
@@ -52,14 +54,14 @@
             android:background="@drawable/square_shape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.372" />
 
         <View
             android:id="@+id/viewYellowCircle"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="96dp"
+            android:layout_marginBottom="180dp"
             android:background="@drawable/ic_baseline_circle_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +77,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.917"
             app:layout_constraintStart_toEndOf="@+id/square_view"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.372" />
 
         <View
             android:id="@+id/viewblackcircle"
@@ -88,7 +91,38 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.337" />
+            app:layout_constraintVertical_bias="0.272" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/viewblackcircle"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints">
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/next_Btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_border"
+            android:gravity="center"
+            android:hint="@string/button_next"
+            android:padding="10dp"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
+            app:backgroundTint="#50C1B6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewYellowCircle"
+            app:layout_constraintVertical_bias="0.598"
+            tools:layout_editor_absoluteX="9dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 </LinearLayout>
