--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -103,6 +103,9 @@
         <action
             android:id="@+id/action_eighthQuestion_to_ninthQuestion"
             app:destination="@id/ninthQuestion" />
+        <action
+            android:id="@+id/action_eighthQuestion_to_tenthQuestion"
+            app:destination="@id/tenthQuestion" />
     </fragment>
     <fragment
         android:id="@+id/ninthQuestion"
