--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -4,10 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tenth_question_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:gravity="center"
+            android:text="tenth question"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="35sp"/>
+
+        <ImageView
+            android:id="@+id/tenth_question_ImageView"
+            android:layout_width="194dp"
+            android:layout_height="197dp"
+            android:src="@drawable/tenth_question"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+
     <com.example.minimental.Painter
         android:id="@+id/painter_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
 </RelativeLayout>
