--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -83,7 +83,8 @@
     <fragment
         android:id="@+id/sixth_question"
         android:name="com.example.minimental.fragments.Sixth_question"
-        android:label="Sixth_question" >
+        android:label="Sixth_question"
+        tools:layout="@layout/sixth_question">
         <action
             android:id="@+id/action_sixth_question_to_eighthQuestion"
             app:destination="@id/eighthQuestion" />
@@ -91,7 +92,8 @@
     <fragment
         android:id="@+id/SeventhQuestion"
         android:name="com.example.minimental.fragments.SeventhQuestion"
-        android:label="Seventhquestion" >
+        android:label="Seventhquestion"
+        tools:layout="@layout/seventh_question">
         <action
             android:id="@+id/action_SeventhQuestion_to_eighthQuestion"
             app:destination="@id/eighthQuestion" />
@@ -99,7 +101,8 @@
     <fragment
         android:id="@+id/eighthQuestion"
         android:name="com.example.minimental.fragments.EighthQuestion"
-        android:label="EighthQuestion" >
+        android:label="EighthQuestion"
+        tools:layout="@layout/eighth_question">
         <action
             android:id="@+id/action_eighthQuestion_to_ninthQuestion"
             app:destination="@id/ninthQuestion" />
@@ -110,7 +113,8 @@
     <fragment
         android:id="@+id/ninthQuestion"
         android:name="com.example.minimental.fragments.NinthQuestion"
-        android:label="NinthQuestion" >
+        android:label="NinthQuestion"
+        tools:layout="@layout/ninth_question">
         <action
             android:id="@+id/action_ninthQuestion_to_tenthQuestion"
             app:destination="@id/tenthQuestion" />
@@ -118,5 +122,6 @@
     <fragment
         android:id="@+id/tenthQuestion"
         android:name="com.example.minimental.fragments.TenthQuestion"
-        android:label="TenthQuestion" />
+        android:label="TenthQuestion"
+        tools:layout="@layout/tenth_question"/>
 </navigation>
