--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -75,6 +75,7 @@
                     app:counterEnabled="true"
                     app:startIconDrawable="@drawable/ic_baseline_mic_24">
 
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_nameET"
                         android:layout_width="match_parent"
@@ -94,6 +95,12 @@
                 android:orientation="vertical"
                 android:paddingStart="100dp"
                 android:paddingEnd="100dp">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_mic_24"
+                    android:id="@+id/mic_image_btn"/>
 
                 <Button
                     android:id="@+id/Button_finish_answer"
