--- a/app/src/main/res/layout/second_question.xml
+++ b/app/src/main/res/layout/second_question.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    android:orientation="vertical"
-    tools:ignore="ExtraText">
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
