--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -1,11 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:layout_centerHorizontal="true"
+    android:background="@drawable/background_gradient"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/choose_third_question_title"
@@ -36,65 +37,69 @@
     <LinearLayout
         android:id="@+id/dragLinearout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_drag_drop"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            app:cardElevation="10dp"
+            android:layout_margin="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <View
+                    android:id="@+id/square_view"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/square_shape" />
+
+                <View
+                    android:id="@+id/circle_view"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="false"
+                    android:layout_centerHorizontal="false"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/circle_shape" />
+
+                <View
+                    android:id="@+id/viewYellowCircle"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_above="@id/square_view"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="40dp"
+                    android:background="@drawable/ic_baseline_circle_24" />
+
+                <View
+                    android:id="@+id/viewblackcircle"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_below="@id/square_view"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="40dp"
+                    android:background="@drawable/ic_baseline_circle_24"
+                    android:backgroundTint="@color/black" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/eight_drag_layout">
-
-
-        <View
-            android:id="@+id/square_view"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="16dp"
-            android:background="@drawable/square_shape"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.372" />
-
-        <View
-            android:id="@+id/viewYellowCircle"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="180dp"
-            android:background="@drawable/ic_baseline_circle_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <View
-            android:id="@+id/circle_view"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/circle_shape"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.917"
-            app:layout_constraintStart_toEndOf="@+id/square_view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.372" />
-
-        <View
-            android:id="@+id/viewblackcircle"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@drawable/ic_baseline_circle_24"
-            android:backgroundTint="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/viewYellowCircle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.272" />
-
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp">
 
         <Button
             android:id="@+id/next_Btn"
@@ -107,13 +112,6 @@
             android:hint="@string/button_next"
             android:padding="10dp"
             android:textColorHint="@color/white"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewYellowCircle"
-            app:layout_constraintVertical_bias="0.598"
-            tools:layout_editor_absoluteX="9dp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+            android:textSize="16sp" />
     </LinearLayout>
 </LinearLayout>
